[tool.poetry]
name = "uber-pickups"
version = "0.1.0"
description = ""
authors = [""]
readme = "README.md"
packages = [{include = "uber_pickups"}]

[tool.poetry.dependencies]
python = "^3.11"
streamlit = "^1.17.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.0.0"
mypy = "^0.991"
black = "^23.1.0"
isort = "^5.12.0"
pytest = "^7.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
